テーブルの仮作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,7 +49,7 @@
           <% if current_user.admin %>
             <%= link_to "年別データ", root_path, class: "header-menu-contents-card-button" %>
             <%= link_to "月別データ", root_path, class: "header-menu-contents-card-button" %>
-            <%= link_to "日別データ", root_path, class: "header-menu-contents-card-button" %>
+            <%= link_to "日別データ", admin_attendance_today_path, class: "header-menu-contents-card-button" %>
           <% else %>
             <%= link_to "年別データ", root_path, class: "header-menu-contents-card-button" %>
             <%= link_to "月別データ", user_attendance_thismonth_path(current_user), class: "header-menu-contents-card-button" %>
