--- a/app/assets/stylesheets/admin_table.css
+++ b/app/assets/stylesheets/admin_table.css
@@ -1,6 +1,5 @@
 .table-border{
   width: 900px;
-
   margin: 0 auto;
   border: 2px solid #B1D881;
   border-radius: 10px;
@@ -11,15 +10,15 @@
   padding: 0;
   border-radius: 8px;
   table-layout: fixed;
-  position: relative;
+
   overflow: hidden;
 }
 
+.day-table-tr{
+  background-color: #c1ed8cc4;
+}
 .day-table tr {
   padding: .35em;
-}
-.day-table-tr{
-  background-color: #B1D881;
 }
 .day-table-tr-body{
   height: 50px;
@@ -57,6 +56,13 @@
   background-color: #fff;
   border-right: 1px solid #bbb;
   height: 50px;
+  cursor: pointer;
+}
+.day-table-th-name:hover{
+  background-color: #eafffe;
+}
+.day-table-th-name:active{
+  background-color: #d5fbf9;
 }
 .day-table-th{
   width: 130px;
@@ -65,8 +71,8 @@
   cursor: pointer;
   position: relative;
 }
-td:hover::before{
-  background-color: red;
+.day-table-td-click:hover::before{
+  background-color: #f6ffeb;
   content: "";
   height: 100%;
   left: -5000px;
@@ -74,4 +80,35 @@ td:hover::before{
   top: 0;
   width: 10000px;
   z-index: -2;
+}
+.day-table-td-click:active::before{
+  background-color: #e3f9c9;
+  content: "";
+  height: 100%;
+  left: -5000px;
+  position: absolute;
+  top: 0;
+  width: 10000px;
+  z-index: -2;
+}
+.table-scroll{
+  margin-bottom: 30px;
+  height: calc(100vh - 280px);
+  overflow: auto;
+}
+.day-table-td-status-div{
+  font-size: 1.2em;
+  color: #d77171;
+}
+.day-table-td-status-div:hover{
+  color: #dc5d5d;
+}
+
+/* eidthが1000px以下になったら */
+@media screen and (max-width: 1000px) {
+  .table-scroll{
+    width: 90%;
+    margin: 0 auto 30px auto;
+    overflow: auto;
+  }
 }
