--- a/app/views/attendances/show_by_day.html.erb
+++ b/app/views/attendances/show_by_day.html.erb
@@ -118,9 +118,13 @@
     <% end %>
     <div class="attendance-area-break">
       <div>
-        <%= link_to user_new_break_path(@user, @new_create_date), class: "index-user-card-button", title: "休憩時間を追加する" do %>
-          <i class="fa-solid fa-plus"></i>
-          休憩時間を追加する
+        <% if @attendance.start_time.nil? || @attendance.end_time.nil? %>
+          出退勤時間を入力してください
+        <% else %>
+          <%= link_to user_new_break_path(@user, @new_create_date), class: "index-user-card-button", title: "休憩時間を追加する" do %>
+            <i class="fa-solid fa-plus"></i>
+            休憩時間を追加する
+          <% end %>
         <% end %>
       </div>
     </div>
