--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -1,5 +1,9 @@
 <% provide(:title, 'ホーム') %>
 
 <div class="home">
-  <%= render 'user' %>
+  <% if current_user.admin? %>
+    <%= render 'admin' %>
+  <% else %>
+    <%= render 'user' %>
+  <% end %>
 </div>
