管理者の人が開いているときのみajaxが動くように変更

--- a/app/views/top_pages/_admin.html.erb
+++ b/app/views/top_pages/_admin.html.erb
@@ -108,4 +108,18 @@
       button.textContent = '全て表示';
     }
   }
+  
+  function updateNowUserAttendances() {
+    $.ajax({
+      url: '/now_user_attendances',
+      dataType: 'json',
+      success: function(data) {
+        $('#now-user-attendances-container').html(data.html);
+      }
+    });
+  }
+
+  $(document).ready(function() {
+    setInterval(updateNowUserAttendances, 10000);
+  });
 </script>
