--- a/app/views/top_pages/_now_attendance.html.erb
+++ b/app/views/top_pages/_now_attendance.html.erb
@@ -1,4 +1,4 @@
-<div class="home-admin-reload" onclick='window.location="<%= root_path %>"' role="link" title="10秒で自動更新されます">
+<div class="home-admin-reload" onclick='updateNowUserAttendances()' role="link" title="10秒で自動更新されます">
   <i class="fa-solid fa-rotate"></i> 更新
 </div>
 <div class="home-admin-today">
